@@ -9,8 +9,10 @@ installation-guide (2008xxxx) UNRELEASED; urgency=medium
   * Update description of country selection in line with recent changes in
     localechooser.
   * Request output of lspci -knn in installation reports.
+  * Apply patch from Frank Lichtenheld to improve netboot instructions for
+    PowerPC. Closes: #275565.
 
- -- Frans Pop <fjp@debian.org>  Tue, 17 Jun 2008 22:01:30 +0200
+ -- Frans Pop <fjp@debian.org>  Wed, 02 Jul 2008 17:06:28 +0200
 
 installation-guide (20080520) unstable; urgency=medium
 
